--- a/plai-hask.cabal
+++ b/plai-hask.cabal
@@ -24,7 +24,7 @@ library
                      , mtl
   default-language:    Haskell2010
 
-executable plai-hask-exe
+executable main1-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
@@ -35,6 +35,18 @@ executable plai-hask-exe
                      , transformers
                      , mtl                     
   default-language:    Haskell2010
+
+executable main2-exe
+  hs-source-dirs:      app
+  main-is:             Main2.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , parsec
+                     , containers
+                     , vector
+                     , transformers
+                     , mtl                     
+  default-language:    Haskell2010  
 
 test-suite plai-hask-test
   type:                exitcode-stdio-1.0
