--- a/plai-hask.cabal
+++ b/plai-hask.cabal
@@ -15,13 +15,18 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     SExprParser
+  exposed-modules:     SExprParser, Chapter5
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , containers
                      , vector
                      , transformers
                      , mtl
+                     , tasty
+                     , HUnit
+                     , QuickCheck
+                     , tasty-hunit
+                     , tasty-quickcheck                     
   default-language:    Haskell2010
 
 executable main1-exe
@@ -33,7 +38,8 @@ executable main1-exe
                      , containers
                      , vector
                      , transformers
-                     , mtl                     
+                     , mtl
+                     , plai-hask
   default-language:    Haskell2010
 
 executable main2-exe
@@ -45,8 +51,22 @@ executable main2-exe
                      , containers
                      , vector
                      , transformers
-                     , mtl                     
-  default-language:    Haskell2010  
+                     , mtl
+                     , plai-hask               
+  default-language:    Haskell2010
+
+executable main3-exe
+  hs-source-dirs:      app
+  main-is:             Main3.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , parsec
+                     , containers
+                     , vector
+                     , transformers
+                     , mtl
+                     , plai-hask               
+  default-language:    Haskell2010    
 
 test-suite plai-hask-test
   type:                exitcode-stdio-1.0
@@ -55,6 +75,7 @@ test-suite plai-hask-test
   build-depends:       base
                      , plai-hask
                      , tasty
+                     , tasty-auto
                      , HUnit
                      , QuickCheck
                      , tasty-hunit
@@ -62,6 +83,7 @@ test-suite plai-hask-test
                      , parsec
                      , vector
                      , containers
+                     , plai-hask
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
