--- a/plai-hask.cabal
+++ b/plai-hask.cabal
@@ -66,7 +66,19 @@ executable main3-exe
                      , transformers
                      , mtl
                      , plai-hask               
-  default-language:    Haskell2010    
+  default-language:    Haskell2010
+
+executable qc-exe
+  hs-source-dirs:      app
+  main-is:             TestQuickCheck.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , parsec
+                     , containers
+                     , vector
+                     , transformers
+                     , mtl
+  default-language:    Haskell2010      
 
 test-suite plai-hask-test
   type:                exitcode-stdio-1.0
