--- a/plai-hask.cabal
+++ b/plai-hask.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     SExprParser, Chapter5
+  exposed-modules:     SExprParser, Chapter5, Chapter6
   build-depends:       base >= 4.7 && < 5
                      , parsec
                      , containers
